# thruster_ident_adc

./: CMakeLists.txt  README.md  copy_bbb_brlnet.sh  copy_bbb_brlwifi.sh  copy_bbb_local.sh  package.xml  test_robot.cpp
include/test_robot/: test_robot.hpp
include/thruster_ident_adc/: ident_me.hpp
launch/: adc_pub.launch  ident_me.launch
src/: ident_me.cpp  test_robot.cpp
